# Test

./: Cargo.toml  build.rs  rust-toolchain.toml
kernels/: Cargo.toml
kernels/src/: bsdf.rs  intersection.rs  lib.rs  light_pick.rs  rng.rs  util.rs  vec.rs
shared_structs/: Cargo.toml
shared_structs/src/: image_polyfill.rs  lib.rs
src/: app.rs  asset.rs  atlas.rs  bvh.rs  file_dialog.rs  lib.rs  light_pick.rs  main.rs  trace.rs
src/framework/: framework.rs  kernel.rs  mod.rs
src/framework/features/: integrate_image.rs  integrate_ndarray.rs  mod.rs
src/framework/primitives/: buffers.rs  images.rs  mod.rs  samplers.rs
tests/: correctness_tests.rs
