[workspace]
members = ["kernels", "shared_structs"]
resolver = "2"

[workspace.dependencies]
bytemuck = { version = "1", default-features = false }
glam = { version = "0.30", default-features = false }
kernels = { path = "kernels" }
shared_structs = { path = "shared_structs" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git" }

[package]
name = "rustic"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_structs.workspace = true
kernels.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
glam = { workspace = true, features = ["bytemuck"] }
rand = "0.8"
lazy_static = "1"
gltf = "1"
base64 = "0.13"
image = { version = "0.25", default-features = false, features = ["png", "hdr"] }
parking_lot = "0.12"
thiserror = "2"
ndarray = "0.16"
futures = "0.3"
log = "0.4"
winit = "0.30"
wgpu = { version = "23", features = ["spirv"] }
egui-wgpu = "0.30"
egui-winit = "0.30"
egui = "0.30"
pollster = "0.4"
rayon = "1"

[build-dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu.git" }

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3

[profile.dev]
opt-level = 1
